--- a/exam/templates/pythonintro.html
+++ b/exam/templates/pythonintro.html
@@ -234,7 +234,9 @@
                 <source src="{% static 'videos/Python-Basics.mp4' %}" type="video/mp4">
                 Your browser does not support the video tag.
             </video><br>
-
+            <div class="center-align">
+                <a href="{% url 'watch_python_videos' %}" class="btn btn-primary col-3 mx-auto" tabindex="-1" role="button" aria-disabled="true">Watch More Videos</a>
+            </div>
             <div style="padding: 40px;">
             <h4 >Understanding Key Concepts in Python Programming</h4><br>
         <p style=" color: black; font-size: 18px; ">
