--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -63,10 +63,16 @@
                   <div>
                       <button class="btn btn-block bg-info">LogIn</button>
                   </div>
-                  <div class="form-bottom">
-                    <p class="not-registered">Dont have an account? <a href="{% url 'reg' %}">Register</a></p>
+                  <div class="form-bottom " >
+
+                    <p class="not-registered">Dont have an account? 
+                      <br><a href="{% url 'reg' 'student' %}">Student Register</a><br>
+
+                      <a href="{% url 'reg' 'faculty' %}">Faculty Register</a></p>
+                      
                     <a href="{% url 'resetpwd' %}">Forgot password?</a></p>
                   </div>
+                 
                 </form>
               </div>
             </div>
