--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -215,13 +215,13 @@
                     <li><a  href="{% url 'courseregphp' %}" style="text-decoration:  inherit;">PHP</a></li>
 
 
-                <div class="dropdown">
-                <li><a   href="#" style="text-decoration: inherit;">Projects</a></li>
-                    <div class="dropdown-content">
-<!--                        <a href="{% url 'upload_projectmain' %}">Upload Project</a>-->
-                        <a href="{% url 'project_list' %}">View Projects</a>
-                    </div>
-                </div>
+
+                <li><a   href="{% url 'project_list' %}" style="text-decoration: inherit;">Projects</a></li>
+<!--                    <div class="dropdown-content">-->
+<!--&lt;!&ndash;                        <a href="{% url 'upload_projectmain' %}">Upload Project</a>&ndash;&gt;-->
+<!--                        <a href="#">View Projects</a>-->
+<!--                    </div>-->
+
                 <li><a   href="{% url 'ProgressCard' %}" style="text-decoration:  inherit;">Progress Report</a></li>
 
                <div class="dropdown">
@@ -241,7 +241,7 @@
                     </div>
                 </div>
 
-                
+
                 <li><a   href="{% url 'job_listings' %}" class="career-link">Careers</a></li>
 
 
@@ -300,7 +300,7 @@
             </div>
         </div>
     </section>
-    
+
 
 
 
